bridge/base/0-data-ingestion-hybrid-rag-namespace.yaml
#! 0-data-ingestion-hybrid-rag-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: data-ingestion-hybrid-rag
    labels:
        com.docker.compose.project: data_ingestion_hybrid_rag
