bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: data-ingestion-hybrid-rag
    labels:
        com.docker.compose.project: data_ingestion_hybrid_rag
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: data_ingestion_hybrid_rag
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: data_ingestion_hybrid_rag
                com.docker.compose.service: backend
                com.docker.compose.network.rag_network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: hybrid-rag-backend
                  image: data_ingestion_hybrid_rag-backend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: backend-8005
                      containerPort: 8005
                  volumeMounts:
                    - name: app
                      mountPath: /app
            volumes:
                - name: app
                  hostPath:
                    path: D:\All-Source-Code\YRU-All-CODE\YRU-AI-SPACE-NEW\Data_Ingestion_Hybrid_RAG
