bridge/base/backend-service.yaml
# check if there is at least one published port

#! backend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend-published
    namespace: data-ingestion-hybrid-rag
    labels:
        com.docker.compose.project: data_ingestion_hybrid_rag
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: data_ingestion_hybrid_rag
        com.docker.compose.service: backend
    ports:
        - name: backend-8005
          port: 8005
          protocol: TCP
          targetPort: backend-8005

# check if there is at least one published port
