bridge/base/rag_network-network-policy.yaml
#! rag_network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: rag-network-network-policy
    namespace: data-ingestion-hybrid-rag
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.rag_network: "true"
    policyTypes:
        - Ingress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.rag_network: "true"
